<?xml version="1.0"?>
<package format="3">
  <name>vnav_lab2_rust</name>
  <version>0.1.0</version>
  <description>VNAV Lab 2 rewritten with ROS 2 Rust nodes.</description>
  <maintainer email="ojyoung@ucsc.edu">Oliver Young</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
